# sol-wallet-monitor

./: CHANGES.md  Cargo.toml  FINAL_CORRECTIONS_SUMMARY.md  README.md  UI_IMPROVEMENTS_SUMMARY.md  WSOL_FIX_SUMMARY.md  config.toml  start.sh  wallets.json
src/: main.rs
web/: index.html
